--- a/init.org
+++ b/init.org
@@ -65,7 +65,7 @@ Install [[https://github.com/jwiegley/use-package][use-package]] if not installe
 I use [[https://github.com/ch11ng/exwm][exwm]] as my window manager.
 Begin by starting the emacs server.
 #+begin_src emacs-lisp
-(unless (server-running-p) (server-start))
+  (unless (and (fboundp 'server-running-p) (server-running-p)) (server-start))
 #+end_src
 
 Install exwm and load its configuration file (currently external).
