--- a/init.org
+++ b/init.org
@@ -70,13 +70,20 @@ Begin by starting the emacs server.
 
 Install exwm and load its configuration file (currently external).
 #+begin_src emacs-lisp
-(use-package exwm
-  :straight t
-  :config
-  (let ((exwm-config-file (concat user-opt-directory "exwm-config-file.el")))
-    (if (file-exists-p exwm-config-file)
-        (load exwm-config-file)))
-  (exwm-enable))
+  (use-package exwm
+    :straight t
+    :config
+    (require 'exwm-randr)
+    (setq exwm-randr-workspace-output-plist '(1 "DP-1"))
+    (add-hook 'exwm-randr-screen-change-hook
+              (defun ab/exwm-randr ()
+                (start-process-shell-command
+                 "xrandr" nil "xrandr --output eDP-1 --output DP-1")))
+    (exwm-randr-enable)
+    (let ((exwm-config-file (concat user-opt-directory "exwm-config-file.el")))
+      (if (file-exists-p exwm-config-file)
+          (load exwm-config-file)))
+    (exwm-enable))
 #+end_src
 Install [[https://github.com/agzam/exwm-edit][exwm-edit]] so that we can edit text blocks from other programs in emacs.
 #+begin_src emacs-lisp
