--- a/init.org
+++ b/init.org
@@ -238,7 +238,8 @@ The configuration is written in the next section, and shows up in place of ~<<or
     <<org-mode-config>>
     (add-hook 'org-mode-hook
               (lambda ()
-                (visual-line-mode 1)))
+                (visual-line-mode 1)
+                (org-cdlatex-mode 1)))
     (setq org-use-speed-commands t))
 #+end_src
 
@@ -1108,64 +1109,65 @@ Use [[https://github.com/Malabarba/beacon][beacon-mode]] to show where the curso
 *** LaTeX etc
 
 #+begin_src emacs-lisp
-(defun ab/normalise-bib ()
-  (interactive)
-  (shell-command-on-region
-   (point-min) (point-max)
-   "bibtool -r ~/Bibliography/rules.rsc" t t "*Messages*"))
+  (defun ab/normalise-bib ()
+    (interactive)
+    (shell-command-on-region
+     (point-min) (point-max)
+     "bibtool -r ~/Bibliography/rules.rsc" t t "*Messages*"))
 
-(use-package auctex
-  :straight t
-  :init
-  (use-package bibretrieve
-    :straight (:host github :repo "asilata/bibretrieve")
+  (use-package auctex
+    :straight t
+    :init
+    (use-package bibretrieve
+      :straight (:host github :repo "asilata/bibretrieve")
+      :config
+      (add-hook
+       'bibretrieve-pre-write-bib-items-hook
+       'ab/normalise-bib
+       ))
+    (use-package auctex-latexmk
+      :straight t
+      :config
+      (auctex-latexmk-setup))
+    :defer t
+    :bind (([f7] . TeX-error-overview))
     :config
-    (add-hook
-     'bibretrieve-pre-write-bib-items-hook
-     'ab/normalise-bib
-     ))
-  (use-package auctex-latexmk
+    (use-package reftex :straight t
+      :config
+      (setq reftex-default-bibliography "~/Bibliography/math.bib"))
+    (use-package smartparens-latex)
+    (set-default 'preview-scale-function 2))
+
+  (use-package cdlatex
+    :straight t)
+
+  (add-hook 'LaTeX-mode-hook
+            (lambda ()
+              (TeX-global-PDF-mode 1)
+              (flyspell-mode 1)
+              (auto-fill-mode 0)
+              (setq TeX-view-program-selection '((output-pdf "PDF Tools")))
+              (TeX-source-correlate-mode 1)
+              (visual-line-mode 1)
+              (yas-minor-mode 0)
+              (reftex-mode 1)
+              (cdlatex-mode 1)
+              ))
+
+  (add-hook 'TeX-after-compilation-finished-functions #'TeX-revert-document-buffer)
+
+  (use-package ivy-bibtex
     :straight t
     :config
-    (auctex-latexmk-setup))
-  :defer t
-  :bind (([f7] . TeX-error-overview))
-  :config
-  (use-package reftex :straight t
-    :config
-    (setq reftex-default-bibliography "~/Bibliography/math.bib"))
-  (use-package smartparens-latex)
-  (set-default 'preview-scale-function 2))
-
-(use-package cdlatex
-  :straight t)
-
-(add-hook 'LaTeX-mode-hook
-          (lambda ()
-	    (TeX-global-PDF-mode 1)
-            (flyspell-mode 1)
-            (auto-fill-mode 0)
-            (setq TeX-view-program-selection '((output-pdf "PDF Tools")))
-            (TeX-source-correlate-mode 1)
-            (visual-line-mode 1)
-            (yas-minor-mode 0)
-            (reftex-mode 1)
-            ))
-
-(add-hook 'TeX-after-compilation-finished-functions #'TeX-revert-document-buffer)
-
-(use-package ivy-bibtex
-  :straight t
-  :config
-  (setq ivy-re-builders-alist '((ivy-bibtex . ivy--regex-ignore-order)
-                                (t . ivy--regex-plus)))
-  (setq bibtex-completion-notes-path "~/Org/Roam/Bibnotes")
-  (setq bibtex-completion-bibliography '("~/Bibliography/math.bib"))
-  (setq bibtex-completion-library-path '("~/Papers"))
-  (ivy-set-display-transformer
-   'org-ref-ivy-insert-cite-link
-   'ivy-bibtex-display-transformer)
-  )
+    (setq ivy-re-builders-alist '((ivy-bibtex . ivy--regex-ignore-order)
+                                  (t . ivy--regex-plus)))
+    (setq bibtex-completion-notes-path "~/Org/Roam/Bibnotes")
+    (setq bibtex-completion-bibliography '("~/Bibliography/math.bib"))
+    (setq bibtex-completion-library-path '("~/Papers"))
+    (ivy-set-display-transformer
+     'org-ref-ivy-insert-cite-link
+     'ivy-bibtex-display-transformer)
+    )
 #+end_src
 
 *** Lean
