--- a/init.org
+++ b/init.org
@@ -549,7 +549,6 @@ See the [[https://www.orgroam.com/][org-roam website]].
            ("C-c n t" . org-roam-dailies-capture-today)
            ("C-c n i" . org-roam-node-insert))
     :custom
-    (org-roam-v2-ack t)
     (org-roam-capture-templates
      (let* ((org-roam-file-name-format "%<%Y%m%d%H%M%S>-${slug}.org")
             (org-roam-common-head "#+title: ${title}\n#+created: %U\n")
@@ -587,7 +586,9 @@ See the [[https://www.orgroam.com/][org-roam website]].
         :clock-in t :clock-resume t))))
   (org-roam-tag-sources '(prop all-directories))
   :config
-  (require 'org-roam-protocol))
+  (require 'org-roam-protocol)
+  :init
+  (setq org-roam-v2-ack t))
 #+end_src
 
 **** org-roam-ui
